# test-gh-workflow

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_app/: __init__.py  agent.py  main.py
src/: sample_module.py
tests/: conftest.py  test_agent.py  test_sample_module.py
