[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_app"
version = "0.1.0"
authors = [{name="Codex", email="codex@example.com"}]
description = "A simple agent application"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
agent-app = "agent_app.main:main"
